# dotfiles

./: .bash_profile  .bashrc  .bashrc.slurmy  .bashrc.slurmy.conda  .condarc  .gitconfig  .tmux.conf  Dockerfile  README.md  Vagrantfile  env.yml  flake.nix  gcp.sh  init.vim  linux.txt  mpb.txt  nix_update.sh  pyproject.toml  setup.sh  start  ubuntu.sh
dev/: flake.nix
slurm/: sl.sh  start-tmux.sh
