[project]
name = "dev"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "ipdb>=0.13.13",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.5",
    "jupyterlab-onedarkpro",
    "jupyterlab-vim>=4.1.4",
    "lightning>=2.5.0.post0",
    "line-profiler>=4.2.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "nvitop>=1.5.1",
    "pandas>=2.2.3",
    "pip>=25.0.1",
    "plotly>=6.0.0",
    "polars>=1.22.0",
    "pynvim>=0.5.2",
    "pytest>=8.3.4",
    "ray[all]>=2.42.1",
    "scalene>=1.5.51",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.48.3",
]

[tool.uv.sources]
jupyterlab-onedarkpro = { git = "https://github.com/onepan/jupyterlab_onedarkpro/" }
